examples/invalid/bad-record.whip
workflow BadRecord

enum ReviewStatus {
  Accept
  Revise
  Blocked
}

class HumanDecision {
  subject string
  status ReviewStatus
  confidence float
  mode "manual" | "auto"
}

rule bad_record
  when manual review requested as request
=> {
  record HumanDecision {
    subject request.missing
    status Maybe
    confidence "high"
    mode "scripted"
    extra "field"
  }
}
